<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.user.taxcalc.MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.161"
            app:srcCompat="@drawable/download" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cont"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.319"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tax"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.718" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/num"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.896" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/button3"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/view"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button4"

                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/sum"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintStart_toEndOf="@+id/button3"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button5"

                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/per"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintStart_toEndOf="@+id/button4"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button6"

                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/div"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/button7"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="62dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/b"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button8"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="62dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/c"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button9"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="62dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/d"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button10"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="62dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/e"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/button11"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="122dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/f"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button12"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="122dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/g"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button13"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="122dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/h"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button14"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="122dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/i"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/button15"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="180dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/j"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button16"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="180dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/k"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button17"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="180dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/l"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button18"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="180dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/m"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/button19"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="235dp"
                    android:layout_weight="2"
                    android:background="@color/button"
                    android:text="@string/n"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button20"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="235dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/o"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button21"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="235dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:text="@string/p"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>










